--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.generate_statistics=false
 logging.level.org.hibernate.stat=debug
-#logging.level.org.hibernate.type=trace
+logging.level.org.hibernate.type=trace
  
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
